Logowanie z nginx + endpoint do logowania

--- a/fluent-bit/conf/fluent-bit.conf
+++ b/fluent-bit/conf/fluent-bit.conf
@@ -1,6 +1,6 @@
 [SERVICE]
     flush            1
-    log_Level        info
+    log_Level        trace
     daemon           off
     parsers_File     parsers.conf
     http_server      on
@@ -13,10 +13,21 @@
     max_chunk_size   1M
     max_buffer_size  5M
 
-[INPUT]
-    name             syslog
-    mode             udp
+[FILTER]
+    Name parser
+    Match *
+    Key_Name log
+    Reserve_Data On
+    Preserve_Key On
+    Parser docker
 
+[FILTER]
+    Name parser
+    Match *
+    Key_Name body
+    Reserve_Data On
+    Preserve_Key On
+    Parser loggin_endpoint
 [OUTPUT]
     name             es
     match            *
