--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,22 @@
 version: '2.2'
 services:
-
+  app:
+    image: openresty/openresty
+    ports:
+      - 8080:80
+    logging:
+      driver: fluentd
+      options: 
+        fluentd-address: "localhost:24224"
+    networks:
+      - elastic
+    links:
+      - "fluent-bit"
+    volumes:
+      - ./nginx/nginx.conf:/usr/local/openresty/nginx/conf/nginx.conf
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/html/:/usr/share/nginx/html/
+      - ./nginx/htpasswd:/etc/nginx/.htpasswd
   fluent-bit:
     image: fluent/fluent-bit:1.5
     volumes:
